TAG: targetedalleleload-5-2-1-3
DATE: 06/16/2015
STAFF: sc
CHANGES: TR12052
* updated filterProjectIds method of TargetedAlleleLoad.java 
    targetedalleleload-5-2-1-3 to correctly report pids in the database 
    not in the input file

TAG: targetedalleleload-TR11750-BP
DATE: 05/22/2015
STAFF: sc
CHANGES: branch point tag for Infrastructure II linux/pg conversion

TAG: targetedalleleload-5-2-1-2
DATE: 05/11/2015
STAFF: sc
CHANGES: TR12019 - remove generation of html versions of reports because
   they create links to the obsolete production WI.

TAG: targetedalleleload-5-2-1-1
DATE: 03/12/2015
STAFF: sc
CHANGES: TR11941 - added new eucomm hmgu cassette:
    Ifitm2_intron_L1L2_Bact_P

TAG: targetedalleleload-5-1-8-1
DATE: 03/06/2014
STAFF: lec
CHANGES:
1) merge to trunk - branch of allele/schema changes

TAG: targetedalleleload-5-1-7-6
TAG: targetedalleleload-5-1-7-5
DATE: 02/10/2014
STAFF: sc
CHANGES: 
1) tal_common.config.default - 
    Added MAIL_LOG_CUR and added Richard to MAIL_LOG_PROC

TAG: targetedalleleload-tr11515-5
TAG: targetedalleleload-tr11515-4
DATE: 02/20/2014
STAFF: sc
CHANGES:
1) KnockoutAllele.java - handle multiple subtype/allele
2) KompCsdProcessor.java / SangerProcessor.java - handle multiple alleles, kick out cassette 
    L1L2_Del_BactPneo_FFL for all allele subtypes (not just non-conditional)

TAG: targetedalleleload-tr11515-3
DATE: 02/14/2014
STAFF: sc
CHANGES:
1) TargetedAlleleLoadCfg.java - added getAlleleSubType method
2) Constants.java - MUTATION_TYPE_* updated keys, added: SUBTYPE_ANNOT_TYPE_KEY, SUBTYPE_QUAL_KEY
3) KnockoutAllele.java - added subtype, annottype, qualifier attributes get/set methods added
	VOC_AnnotState/DAO creation and insertion
4) KnockoutAlleleProcessor.java - added logger to this abstract class
5) KompCsdProcessor.java/SangerProcessor.java - added setting of subtype in the knockoutAllele, 
    added logging of and throwing exception for non-conditional/L1L2_Del_BactPneo_FFL input records